[package]
name = "{{PROJECTNAME}}"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{USERNAME}}/{{PROJECTNAME}}"
documentation = "https://docs.rs/{{PROJECTNAME}}"
description = "{{DESCRIPTION}}"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]

[dev-dependencies]
