[package]
name = "async-sse"
version = "1.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{USERNAME}}/async-sse"
documentation = "https://docs.rs/async-sse"
description = "Async Server Sent Event parser and encoder"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
async-std = "1.5.0"
http-types = "1.0.1"
log = "0.4.8"
memchr = "2.3.3"
pin-project-lite = "0.1.4"

[dev-dependencies]
femme = "1.3.0"
async-std = { version = "1.5.0", features = ["attributes"] }

[patch.crates-io]
async-std = { path = "../async-std" }
